--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,8 @@
     <add key="MyUrl" value="http://clipas.com.br/agent/"/>
   </appSettings>
   <connectionStrings>
-    <add name="jibenet" connectionString="Data Source=jibemssql.csjmqx5sxw92.ap-southeast-1.rds.amazonaws.com; Initial Catalog=Jibenet; User ID=jibenet; Password=JB2013vp;"/>
+    <add name="jibenet" connectionString="Data Source=jibemssql.csjmqx5sxw92.ap-southeast-1.rds.amazonaws.com; Initial Catalog=Jibenet; User ID=jibenet; Password=JB2013vp; Connect Timeout=600; pooling='true'; Max Pool Size=200"/>
+    <!--<add name="jibenet" connectionString="Data Source=54.254.141.28; Initial Catalog=Clipas; User ID=sa; Password=JB2013vp;"/>-->
   </connectionStrings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
