--- a/Web.config
+++ b/Web.config
@@ -8,10 +8,12 @@
     <add key="FolderPath" value="uploads"/>
     <add key="MyRootUrl" value="http://clipas.com.br/"/>
     <add key="MyUrl" value="http://clipas.com.br/agent/"/>
+    <!--<add key="MyRootUrl" value="http://localhost:3460/Clipas20131008/"/>
+    <add key="MyUrl" value="http://localhost:3460/Clipas20131008/agent/"/>-->
   </appSettings>
   <connectionStrings>
-    <add name="jibenet" connectionString="Data Source=jibemssql.csjmqx5sxw92.ap-southeast-1.rds.amazonaws.com; Initial Catalog=Jibenet; User ID=jibenet; Password=JB2013vp; Connect Timeout=600; pooling='true'; Max Pool Size=200"/>
-    <!--<add name="jibenet" connectionString="Data Source=54.254.141.28; Initial Catalog=Clipas; User ID=sa; Password=JB2013vp;"/>-->
+    <!--<add name="jibenet" connectionString="Data Source=jibemssql.csjmqx5sxw92.ap-southeast-1.rds.amazonaws.com; Initial Catalog=Jibenet; User ID=jibenet; Password=JB2013vp; pooling='true'; Max Pool Size=200"/>-->
+    <add name="jibenet" connectionString="Data Source=54.254.141.28; Initial Catalog=Clipas; User ID=sa; Password=JB2013vp;"/>
   </connectionStrings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -22,10 +24,10 @@
       </system.Web>
   -->
   <system.web>
-    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" cookieless="false" timeout="30"/>
+    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" cookieless="false"/>
     <compilation debug="true" targetFramework="4.5"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Default.aspx" timeout="30"/>
+      <forms loginUrl="~/Default.aspx"/>
     </authentication>
     <customErrors mode="Off" defaultRedirect="GenericErrorPage.htm">
       <error statusCode="403" redirect="NoAccess.htm"/>
